# EKC

./: .gitignore  README.md  pyproject.toml
launcher/: _page_loader.py  ekc_hub.py
launcher/pages/: 1_Auto_Calc_Pipeline.py  2_Recipes.py  3_Push_to_Database.py  4_quick_variance.py  5_concat.py  6_preprocess_single_file.py  7_Fit_Models.py  7_Push_Results.py
scripts/: concat.py  fit_models.py  gui.py  preprocess_single_file.py  push_results.py  push_to_database.py  quick_variance.py  quick_variance_0.py
shortcuts/: launcher.hta  run_app.bat  run_gui.vbs  run_hub.vbs  run_launcher.vbs  run_recipes_gui.vbs
src/etl/: clearer.py  config.py  merger.py  orchestrator.py  saver.py  utils.py
src/etl/preprocessors/cloud/: __init__.py  daily_sales_by_group.py  discount_by_items.py  programming_summary_inventory.py  purchase_master_report_for_all_branches.py  sales_by_category.py  sales_by_items.py  sales_item_wastage.py  sales_summary_of_sales_by_customer_by_item.py  summary_of_sales_by_customer_by_item.py  wastage_report.py
src/etl/preprocessors/local/: __init__.py  (+10 more)
src/etl/quick_variance/: orchestrator.py
src/ml/: config.py  forecast_daily_sales.py  loaders.py  modeling.py  plot.py  regestry.py  validators.py
src/ml/config/: config.py
src/ml/forecasting/: fit_all.py  lgbm.py  nhits.py  registry.py  rf.py  sarima.py  tft.py  xgb_multi.py  xgboost.py
src/ml/functions/: eval.py  results_io.py
src/ml/ops/: concat.py
src/ml/specials/: sales_by_items.py
src/supa/: config.py  db.py  loaders.py  modeling.py  streamlit_functions.py  validators.py
(+7 files in other folders)
