[build-system] # for uv to install the package, not only dependencies
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]

name = "ETL"

version = "0.1.0"

readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.0,<3.0",
    "psycopg2>=2.9.12",
    "rich>=14.3.2",
    "streamlit>=1.54.0",
    "supabase>=2.30.0",
    "xlrd>=2.0.2",
    "xlwings>=0.33.20",
]

[tool.setuptools] 
package-dir = {"" = "src"} 

[tool.setuptools.packages.find] 
where = ["src"]

[theme]
base="dark"
primaryColor="#ff4b4b"

[layout]
wideMode=true
